_generated-doc/3.20/config/quarkus-container-image-buildpack_quarkus.buildpack.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-jvm-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-jvm-builder-image[`quarkus.buildpack.jvm-builder-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.jvm-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks builder image to use when building the project in jvm mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`paketocommunity/builder-ubi-base:latest`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-native-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-native-builder-image[`quarkus.buildpack.native-builder-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.native-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks builder image to use when building the project in native mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-trust-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-trust-builder-image[`quarkus.buildpack.trust-builder-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.trust-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Should the builder image be 'trusted' (use creator lifecycle)


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_TRUST_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_TRUST_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-builder-env-environment-variable-name]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-builder-env-environment-variable-name[`quarkus.buildpack.builder-env."environment-variable-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.builder-env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Environment key/values to pass to buildpacks.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BUILDER_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BUILDER_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-run-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-run-image[`quarkus.buildpack.run-image`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.run-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks run image to use when building the project When not supplied, the run image is determined by the builder image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_RUN_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_RUN_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-seconds]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-seconds[`quarkus.buildpack.pull-timeout-seconds`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-timeout-seconds+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Initial pull timeout for builder/run images, in seconds


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`300`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-increase-seconds]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-increase-seconds[`quarkus.buildpack.pull-timeout-increase-seconds`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-timeout-increase-seconds+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Increase pull timeout for builder/run images after failure, in seconds


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_TIMEOUT_INCREASE_SECONDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_TIMEOUT_INCREASE_SECONDS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`15`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-retry-count]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-retry-count[`quarkus.buildpack.pull-retry-count`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-retry-count+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
How many times to retry an image pull after a failure


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_RETRY_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_RETRY_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`3`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-docker-host]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-docker-host[`quarkus.buildpack.docker-host`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.docker-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
DOCKER_HOST value to use. If not set, the env var DOCKER_HOST is used, if that is not set the platform will look for 'npipe:///./pipe/docker_engine' for windows, and `unix:///var/run/docker.sock' then `unix:///var/run/podman.sock` then `unix:///var/run/user//podman/podman.sock` for linux


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-use-daemon]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-use-daemon[`quarkus.buildpack.use-daemon`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.use-daemon+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
use Daemon mode? Defaults to 'true'


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_USE_DAEMON+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_USE_DAEMON+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-docker-network]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-docker-network[`quarkus.buildpack.docker-network`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.docker-network+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Use specified docker network during build


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-log-level]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-log-level[`quarkus.buildpack.log-level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.log-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Log level to use. Defaults to 'info'


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_LOG_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_LOG_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|string
|`info`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-base-registry-username]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-base-registry-username[`quarkus.buildpack.base-registry-username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.base-registry-username+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The username to use to authenticate with the registry used to pull the base JVM image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BASE_REGISTRY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BASE_REGISTRY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-base-registry-password]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-base-registry-password[`quarkus.buildpack.base-registry-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.base-registry-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The password to use to authenticate with the registry used to pull the base JVM image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BASE_REGISTRY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BASE_REGISTRY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

|===

